SERVER-21249 only restart heartbeats once when a node cannot find a syncsource